--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 			<artifactId>jedis</artifactId>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.9.0</version>
+		</dependency>
 
 	</dependencies>
 
